--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,38 +1,17 @@
-.app {
-  text-align: center;
+.table {
+  border: solid 1px blue;
 }
 
-.appLogo {
-  height: 40vmin;
-  pointer-events: none;
+.tableHeader {
+  border-bottom: solid 3px red;
+  background: aliceblue;
+  color: black;
+  font-weight: bold;
+  user-select: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .appLogo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.appHeader {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.appLink {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.tableData {
+  padding: 10px;
+  border: solid 1px gray;
+  background: papayawhip;
 }
